--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,11 @@
 		</plugins>
 	</build>
 	
-	<distributionManagement>
-        <repository>
-        <uniqueVersion>false</uniqueVersion>
-      <id>corp1</id>
-      <name>Corporate Repository</name>
-      <url>scp://repo/maven2</url>
-      <layout>default</layout>
+     <distributionManagement>
+     <repository>
+     <id>github</id>
+     <name>GitHub OWNER Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/vikashjha26/github-action-poc</url>
       </repository>
       </distributionManagement>
 
