--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,5 +31,4 @@ jobs:
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: 'ghp_5e4Y26sIOZJ1L3AJ2in8O3MFhmVLQQ3Nyrdc'
-        
-    - include - codeql-analysis.yml
+include: '/templates/.before-script-template.yml'
