--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
-        GITHUB_TOKEN: 'ghp_5e4Y26sIOZJ1L3AJ2in8O3MFhmVLQQ3Nyrdc'
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 include: '/templates/.before-script-template.yml'
